Changes in <next version>:
 * New FITS import code and user interface, allowing much more
   flexible and convenient FITS importing
 * Fix half pixel error in linear WCS FITS support

Changes in 1.26.1:
 * Change homepage in program to new site https://veusz.github.io/
 * Change new version checking to use veusz.github.io

Changes in 1.26:
 * Add color themes and automatic coloring of widgets
 * Custom color definitions
 * Improved custom definition dialog box
 * Fix loading translator via command line
 * Show horizontal error lines/fills in key
 * Use iMinuit if available for fitting
 * Fix for dataset plugins returning nD datasets
 * Add editable automatic axis range, including support for shrinking
   range (-X%), percentage ranges (X-Y%) and limits (<X% and >Y%)
 * Fix for key if invalid dataset
 * For log scaling on image widget, show invalid values as being transparent

Bug fixes in 1.25.1:
 * Fix 2D dataset expressions
 * Fix 2D X,Y,Z dataset expressions
 * Better error checking in Gnuplot import plugin
 * Catch non-single character delimiters for 2D CSV import
 * Fix SETTING(), BASENAME(), FILENAME() and DATA() in function evaluation
 * More self tests

Changes in 1.25:
 * Add n-dimensional dataset support
 * Add GetColormap command to return RGBA values
 * Add Colormap sequence plugin for choosing colors of widgets
 * Fill above/below setting shown in key for xy widget
 * Add Covariance widget for plotting covariance ellipses
 * Add lineup, linedown, lineleft and lineright markers
 * Add lineup, linedown and lineextend arrows

Bug fixes:
 * Fix pick indices if non-finite values in data
 * Fix drag and drop of files into Veusz on Windows
 * Raise exception if functions in console request input, avoiding hang
 * Initialise unsafe_mode, in case Veusz used in PyQt embedding
 * Fix crash if setting default setting in default setting window
 * Fix crash in Clone() command on python3

Changes in 1.24: